tests/errors/runtime.FileNotFound.2.res
>> Runtime | File: runtime.FileNotFound.2.art
     error | Line: 1
           | 
           | file not found: ./test
